--- a/src/main/resources/assets/opencrates/lang/en_us.lang
+++ b/src/main/resources/assets/opencrates/lang/en_us.lang
@@ -2,6 +2,10 @@
 
 # Blocks
 tile.basic_crate.name=Basic Crate
+tile.hardened_crate.name=Hardened Crate
+
+inv.basic_crate.name=Basic Crate
+inv.hardened_crate.name=Hardened Crate
 
 ## Item Groups
 itemGroup.opencrates=Open Crates
